--- a/package.json
+++ b/package.json
@@ -9,20 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-picker/picker": "2.4.8",
+    "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
-    "@react-native-async-storage/async-storage": "^1.19.0",
-    "@types/react": "^19.1.8",
+    "@types/react": "~18.0.27",
     "expo": "~48.0.0",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-safe-area-context": "^5.4.1",
-    "react-native-screens": "^4.11.1",
-    "react-native-web": "~0.18.10"
+    "react-native": "0.71.14",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.10",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
